# pyMOR

./: .gitignore  README.md  pyproject.toml  requirement.txt  test.py
.qoder/rules/: karrule.md
applicationTests/cylindericalRod/: cylindricalRod.m  cylindricalRod.mat  test_cylindrical_rod.py
doc/: requirement.txt
mor/: __init__.py
mor/algorithm/: __init__.py  registry.py
mor/algorithm/auto/: __init__.py  linear.py  lyapunov.py  svd.py
mor/algorithm/decompose/: __init__.py
mor/algorithm/linear/: __init__.py  linear.py  shifted.py
mor/algorithm/lyapunov/: __init__.py  bartelsStewart.py  base.py  hr.py  lradi.py  lrsmith.py  sign.py
mor/backends/: __init__.py  backendsBase.py  numpyBackend.py  registry.py  scipyBackend.py  torchBackend.py
mor/core/: __init__.py  exceptions.py
mor/models/: __init__.py  lti.py  modelsBase.py
mor/nn/: __init__.py  registry.py
mor/nn/configs/: __init__.py  baseConfig.py  dynamicsLearningConfig.py  fixedGeometryPinnConfig.py  parametricGeometryPinnConfig.py  physicsInformedConfig.py  representationLearningConfig.py  stateReconstructionConfig.py
mor/nn/data/: __init__.py  baseDataModule.py  snapshotDataModule.py  trajectoryDataModule.py
mor/nn/hpo/: __init__.py  baseHpo.py
mor/nn/losses/: __init__.py  baseLoss.py  mseReconstructionLoss.py  oneStepPredictionLoss.py  pdeResidualLoss.py  vaeReconstructionLoss.py
mor/nn/models/: __init__.py  autoEncoderTorch.py  baseModel.py  convolutionalAutoEncoderTorch.py  gruDynamicsTorch.py  heatSteadyStateTorch.py  lstmDynamicsTorch.py  rnnDynamicsTorch.py  ssmDynamicsTorch.py  torchModelBase.py  transformerDynamicsTorch.py  variationalAutoEncoderTorch.py
mor/nn/pipelines/: __init__.py
mor/nn/reductors/: __init__.py  dynamicsLearningPipelineTorch.py  representationLearningPipelineTorch.py
mor/nn/runtime/: __init__.py  runtimeSession.py
mor/nn/stateReconstruction/: pipelineTorch.py
mor/nn/trainers/: __init__.py  autoEncoderTrainerTorch.py  baseTrainer.py  dynamicsTrainerTorch.py  operatorTrainerTorch.py
mor/nn/validation/: __init__.py  baseValidation.py  dynamicsPredictionMetrics.py  reconstructionMetrics.py
mor/operators/: __init__.py  lowRank.py  matrix.py  operatorsBase.py  scaled.py  sum.py
mor/reductors/: __init__.py  balancedTruncation.py  pod.py  registry.py
mor/solvers/: __init__.py  registry.py
mor/solvers/auto/: __init__.py  lyapunov.py
mor/solvers/lyapunov/: __init__.py  continuousHr.py  continuousHrGeneralized.py  continuousLr.py  continuousLrGeneralized.py  discreteHr.py  discreteHrGeneralized.py  discretedLr.py  discretedLrGeneralized.py  (+2 more)
performanceTests/lyapunov/: lyapunov_continue.py  lyapunov_discreted.py
performanceTests/svd/: staticSVDTest.py
temp/methods/: __init__.py
temp/utils/: __init__.py  lyap.py  lyapunov.py
tests/: conftest.py  test_lrsmith_lowrank.py  test_public_api.py  test_reductors.py
tests/algorithm/: test_lyapunov.py  test_svd.py
tests/operators/: test_operators.py
(+115 files in other folders)
